Login Page with Validation Form

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,4 +9,7 @@
 <ion-content padding>
     <button ion-button color="danger" (click) = "openPushPage()">Push</button>
     <button ion-button color="secondary" (click) = "openRootPage()">Root</button>
+    <hr/>
+    <h1>Login</h1>
+    <button ion-button color="secondary" (click) = "openLoginPage()">Login</button>
 </ion-content>
